Revision history for JSON-Schema-Modern

{{$NEXT}}

0.627     2025-12-04 21:10:22Z
          - improved efficiency of "short_circuit" mode, disabling it
            in fewer and more tightly constrained conditions while allowing
            other functionality to still work (e.g. "strict" mode to detect
            unknown keywords, or when unevaluatedProperties or
            unevaluatedItems are present)

0.626     2025-12-02 00:29:17Z
          - now correctly disallowing booleans in draft4 subschemas

0.625     2025-11-28 22:34:54Z
          - introduce a global schema document cache that can be used by other
            distributions (such as OpenAPI::Modern)

0.624     2025-11-26 20:57:48Z
          - fix strict (unknown keyword checks) validation for draft4 schemas

0.623     2025-11-17 00:14:31Z
          - fix error when navigating a $dynamicRef after initial evaluation
            at a subschema
          - fix incorrect $dynamicRef target following changing scopes into a
            subschema of a schema resource (one with an $id)

0.622     2025-11-08 22:22:19Z
          - allow export of JSON::Schema::Modern::Utilities::is_bool
          - adjust acceptance tests to handle new failure cases in the test
            suite for the hostname format

0.621     2025-10-30 17:56:52Z
          - adjust acceptance tests to handle new failure cases in the test
            suite for hostname, idn-hostname formats

0.620     2025-10-15 23:36:52Z
          - new "clone" method for Error objects
          - work around an issue with using an object overload as a constant
            on perl 5.20

0.619     2025-09-28 22:28:52Z
          - internal changes only (breaking changes for dependencies like
            OpenAPI::Modern)

0.618     2025-09-07 20:27:21Z
          - the json-schema-eval executable now also handles YAML-encoded
            schemas and data, via both files and STDIN, via string
            autodetection

0.617     2025-08-16 20:50:11Z